# shawty

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.env  main.py  pyproject.toml  requirements.txt
.github/workflows/: heroku.yml
shawty/: api.py  auth.py  config.py  database.py  schema.py
shawty/routers/: user.py
shawty/utils/: auth.py
static/: styles.css
templates/: 404.html  base.html  data.html  index.html
